--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,7 +1,6 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/DrE_Datenbank
+spring.datasource.url=jdbc:postgresql://192.168.102.0:5050/DrE_Datenbank
 spring.datasource.username=postgres
-spring.datasource.password=#Malika;
+spring.datasource.password=Malika
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
