--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://192.168.102.0:5050/DrE_Datenbank
 spring.datasource.username=postgres
-spring.datasource.password=Malika
+spring.datasource.password=malika
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
