--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://192.168.102.0:5050/DrE_Datenbank
+spring.datasource.url=jdbc:postgresql://localhost:5050/DrE_Datenbank
 spring.datasource.username=postgres
 spring.datasource.password=malika
 spring.datasource.driver-class-name=org.postgresql.Driver
